--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     height: 15%;
     width: 100%;
     display: flex;
+    background-color: yellow;
 }
 
 .blank1 {
@@ -35,7 +36,7 @@
   height: 100%;
   width: 20%;
   display: flex;
-  background-color: blue;
+  background-color: yellow;
 }
 .blank2 {
     height: 100%;
@@ -54,8 +55,9 @@
 
 .articleBlankAds {
  display: flex;
- width: 80%;
+ width: 87%;
  height: 100%;
+ flex-wrap: wrap;
 }
 
 .article {
@@ -80,9 +82,17 @@ display: flex;
 background-color: yellow;
 }
 
-.footer {
-    width: 80%;
-    height: 20%;
+
+.blank4 {
+    width: 100%;
+    height: 15%;
     display: flex;
-    background-color: aqua;
+    background-color: yellow;
+}
+
+.footer {
+    width: 100%;
+    height: 5%;
+    display: flex;
+    background-color: whitesmoke;
 }
